--- a/glossary.tex
+++ b/glossary.tex
@@ -67,7 +67,7 @@
 \newacronym{OBC}{OBC}{On-Board Computer}
 \newacronym{USB}{USB}{Universal Serial Bus}
 \newacronym{ESL}{ESL}{Electronic System Laboratory}
-\newacronym{PWM}{PWM}{Pulse-Width Modulation}
+\newacronym{PWM}{PWM}{Pulse Width Modulation}
 \newacronym{RC}{RC}{Radio Control}
 \newacronym{QGC}{QGC}{QGroundControl}
 
