--- a/system_id/havok.tex
+++ b/system_id/havok.tex
@@ -35,7 +35,7 @@
     and \( \bm{B}_H \in \R^{(q \cdot n_x) \times n_u} \) is the input matrix. 
     % 
     \paragraph
-    The original \gls{HAVOK} algorithm, developed by \citet{Brunton2017a}, constructs a Hankel matrix from output variables only. 
+    The original \gls{HAVOK} algorithm, developed by \cite{Brunton2017a}, constructs a Hankel matrix from output variables only. 
     In this work, the standard \gls{HAVOK} algorithm has been adapted to incorporate the effect of control.
     An extended Hankel matrix, $\bm{\Pi}$, is created by appending a matrix of inputs to a Hankel matrix of measurements:
     \begin{equation} \label{eq:pi_hankel}
