Final edit of conclusion and last ?? note

--- a/lit_study/lit_study.tex
+++ b/lit_study/lit_study.tex
@@ -95,9 +95,9 @@
         The transportation of payloads with flexible cables have also been studied, where the cable is modelled as a set of serially connected rigid links  \cite{Goodarzi2015, Goodarzi2014, Kotaru2018}. 
         Furthermore, the control of a group of multirotors cooperatively transporting a suspended payload was also considered in various studies \cite{Lee2015, Sanalitro2020, Klausen2014, Goodarzi2015}.
         
-        \paragraph % This paragraph seems out of place and does not flow well ??
+        \paragraph
         From numerous examples in literature, it is clear that the control of multirotors with suspended payloads is a popular research topic.
-        The suspended payload configuration is very useful in situations where a multirotor cannot land since the payload can be attached during hover.
+        The suspended payload configuration is useful in situations where a multirotor cannot land since the payload can be attached during hover.
         This configuration also has the advantage that a payload can have an arbitrary shape or size as long as it has an attachment point for a cable.
         However, the suspended payload increases the degrees of under-actuation of the system, which makes the control problem challenging \cite{Kotaru2018}.
 
